# aizen

./: .cursorrules  .env.example  .gitignore  ParentComponent.vue  README.md  YourComponent.vue  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: AiZEN-design.txt  DEVELOPMENT.md  splashcreen-design.txt
splashscreen/: splashscreen.html  splashscreen.ts  styles-splash.css
src/: App.vue  env.d.ts  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/assets/: base.css
src/components/: PrivacyStatusBar.vue
src/components/analytics/: TagAnalytics.vue  UserActivityDashboard.vue
src/components/base/: BaseBadge.vue  BaseButton.vue  BaseCard.vue  BaseConfirmDialog.vue  BaseInput.vue  BaseLoadingOverlay.vue  BaseToast.vue  DateRangePicker.vue  HighlightedText.vue  TagInput.vue  ToastContainer.vue
src/components/journal/: JournalEditor.vue
src/components/monitoring/: ErrorReportingDashboard.vue  PerformanceMetrics.vue  SystemHealthDashboard.vue
src/components/search/: SearchBar.vue
src/components/ui/: badge.ts
src/components/ui/badge/: Badge.vue
src/plugins/: navigationPlugin.ts  persistencePlugin.ts
src/router/: index.ts
src/services/: ai.ts  analytics.ts  backupMonitoring.ts  dataIntegrity.ts  errorTracking.ts  notifications.ts  performance.ts  sessionTracking.ts  systemHealth.ts  systemMonitoring.ts  userAnalytics.ts  userInteraction.ts
src/stores/: app.ts  journal.ts  logs.ts  privacy.ts  search.ts  tags.ts  toast.ts  user.ts
src/styles/: base.css
src/types/: journal.ts
src/utils/: highlight.ts  storage.ts
src/views/: AnalyticsView.vue  HomeView.vue  JournalView.vue  LogsView.vue  MemoryVaultView.vue  MindfulnessView.vue  RecentlyDeletedView.vue
