[package]
name = "aizen"
version = "0.1.0"
description = "A personal haven app"
authors = ["you"]
edition = "2021"

[lib]
name = "aizen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.11", features = [] }
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-shell = "2.0.0-beta.2"
tauri-plugin-process = "2.0.0-beta.2"
tauri-plugin-window = "2.0.0-beta.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

